# NeoSkidRL

./: .gitignore  DASHBOARD_FEATURES.md  DASHBOARD_UPDATE.md  MUJOCO_LOG.TXT  README.md  pyproject.toml  run_dashboard.sh
.github/workflows/: ci.yml
config/: default.yml  eval.yml  recommended_rewards.yml  static_goal.yml  train.yml
doc/: DASHBOARD_IMPLEMENTATION.md  QUICKSTART_DASHBOARD.md  QUICK_COMMANDS.md  REWARD_IMPROVEMENTS.md  RUN_NAMING.md  reward_dashboard.md  training_and_eval.md  visual_demo.md
src/neoskidrl/: __init__.py  config.py  metrics.py
src/neoskidrl/config/: default.yml  eval.yml  recommended_rewards.yml  static_goal.yml
src/neoskidrl/envs/: __init__.py  skidnav_env.py
src/neoskidrl/logging/: __init__.py  rich_dashboard.py  run_logger.py
src/neoskidrl/models/: omnicar_skid.xml
src/neoskidrl/rewards/: __init__.py  skidnav_reward.py
src/neoskidrl/scripts/: eval.py  eval_policy.py  read_metrics.py  smoke_test.py  train.py  train_sac.py  view_policy.py  visual_demo.py  visual_train.py
src/neoskidrl/train/: __init__.py  callbacks.py  callbacks_rich.py
src/neoskidrl/ui/: __init__.py  control_server.py  reward_dashboard.py  serve_dashboard.py
src/neoskidrl/ui/dashboard/: control_panel.html  index.html
src/neoskidrl/utils/: __init__.py  run_naming.py
tests/: test_config_merge.py  test_dashboard_smoke.py  test_dashboard_utils.py  test_env_smoke.py  test_episode_logger.py  test_eval_callback.py  test_eval_run.py  test_metrics.py  test_reward_terms.py  test_run_logger.py  test_vec_env.py  test_visual_train_checkpoints.py
